--- a/AI3/AI3/AI3.vcxproj
+++ b/AI3/AI3/AI3.vcxproj
@@ -91,12 +91,14 @@
   <ItemGroup>
     <ClCompile Include="Net.cpp" />
     <ClCompile Include="Neuron.cpp" />
+    <ClCompile Include="process.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="Neuron.h" />
+    <ClInclude Include="process.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
