fikset outputen men fått problemer med å hente inn igjen infoen

--- a/AI3/AI3/AI3.vcxproj
+++ b/AI3/AI3/AI3.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="process.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Example.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include.h" />
