Test files from example, as well as example...

--- a/AI3/AI3/AI3.vcxproj
+++ b/AI3/AI3/AI3.vcxproj
@@ -89,6 +89,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="example.cpp" />
     <ClCompile Include="Net.cpp" />
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="process.cpp" />
