--- a/AI3/AI3/AI3.vcxproj.filters
+++ b/AI3/AI3/AI3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="process.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="example.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Net.h">
